[gd_scene load_steps=24 format=3 uid="uid://clgc1t03h3jb8"]

[ext_resource type="Script" path="res://gameOver_scene.gd" id="1_ddju6"]
[ext_resource type="Texture2D" uid="uid://c2n75ywdx865y" path="res://assets/backgrounds/judgesSide.png" id="2_h0vjg"]
[ext_resource type="Texture2D" uid="uid://bhn534hh0wssh" path="res://assets/sprites/judge-sprite.png" id="3_w3tdw"]
[ext_resource type="Texture2D" uid="uid://b5dwq1rgckqxk" path="res://assets/backgrounds/prosecutor-bench.png" id="4_fexm8"]
[ext_resource type="Texture2D" uid="uid://c786m4q5scs3b" path="res://assets/backgrounds/defense-bench.png" id="5_kw83m"]
[ext_resource type="Texture2D" uid="uid://1l03kq0eie04" path="res://assets/backgrounds/witness-stand.png" id="6_13lsb"]
[ext_resource type="FontFile" uid="uid://c42vn22udh74l" path="res://FOT-ModeMinBLargeStd-R.otf" id="7_172v3"]
[ext_resource type="Texture2D" uid="uid://cbgex0h8g788y" path="res://assets/ui/cornerButton_unpressed.png" id="8_rg5gl"]
[ext_resource type="PackedScene" uid="uid://bwo7hmrw6dsbj" path="res://inventory/inventory_ui.tscn" id="9_aa6gm"]
[ext_resource type="AudioStream" uid="uid://dx6vblsbtd8lw" path="res://audio/blip.mp3" id="10_sqv8l"]
[ext_resource type="AudioStream" uid="uid://co66kk6avp7av" path="res://audio/typewriter.mp3" id="11_xxq4s"]
[ext_resource type="AudioStream" uid="uid://wubxj0f2f408" path="res://assets/music/tablebang.mp3" id="12_0tcf5"]
[ext_resource type="AudioStream" uid="uid://c6t23ek6wr5ty" path="res://audio/gavel.mp3" id="13_df2x5"]
[ext_resource type="VideoStream" path="res://assets/videos/judge-hammer.ogv" id="13_gvsat"]

[sub_resource type="Animation" id="Animation_xnak8"]
resource_name = "Blinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.7001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 9, 0]
}

[sub_resource type="Animation" id="Animation_x823a"]
resource_name = "Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pi1fh"]
_data = {
"Blinking": SubResource("Animation_xnak8"),
"Talking": SubResource("Animation_x823a")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ud6jm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4d7s1"]
texture = ExtResource("8_rg5gl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ap33e"]
texture = ExtResource("8_rg5gl")
modulate_color = Color(0.836576, 0.711346, 0.605006, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l7ngl"]
texture = ExtResource("8_rg5gl")
modulate_color = Color(0.541247, 0.291974, 0.221316, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8vwhy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0cily"]

[node name="Node2D" type="Node2D"]

[node name="gameOver_scene" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ddju6")

[node name="Background" type="TextureRect" parent="gameOver_scene"]
layout_mode = 0
offset_right = 1930.0
offset_bottom = 1091.0
texture = ExtResource("2_h0vjg")

[node name="judge_sprite" type="Sprite2D" parent="gameOver_scene"]
visible = false
position = Vector2(978.462, 434.294)
scale = Vector2(1.35481, 1.36604)
texture = ExtResource("3_w3tdw")
hframes = 10
vframes = 5

[node name="judge_sprite_animation" type="AnimationPlayer" parent="gameOver_scene/judge_sprite"]
libraries = {
"": SubResource("AnimationLibrary_pi1fh")
}

[node name="prosecutor-bench" type="TextureRect" parent="gameOver_scene"]
layout_mode = 0
offset_left = -279.0
offset_top = -115.0
offset_right = 1925.0
offset_bottom = 1090.0
texture = ExtResource("4_fexm8")

[node name="defense-bench" type="TextureRect" parent="gameOver_scene"]
layout_mode = 0
offset_left = 6.0
offset_top = -93.0
offset_right = 2146.0
offset_bottom = 1090.0
texture = ExtResource("5_kw83m")

[node name="witness-stand" type="TextureRect" parent="gameOver_scene"]
layout_mode = 0
offset_left = -122.0
offset_top = -83.0
offset_right = 2055.0
offset_bottom = 1088.0
texture = ExtResource("6_13lsb")

[node name="DialogueBoxButton" type="Button" parent="gameOver_scene"]
layout_mode = 0
offset_left = -1932.0
offset_top = 803.0
offset_right = -1924.0
offset_bottom = 811.0
scale = Vector2(1567.73, 159.941)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ud6jm")

[node name="DialogueBox" type="Polygon2D" parent="gameOver_scene"]
position = Vector2(-9, 0)
scale = Vector2(1.02753, 0.99655)
color = Color(0.168627, 0.168627, 0.168627, 0.470588)
polygon = PackedVector2Array(3, 803, 1951, 803, 1951, 1123, 3, 1123)

[node name="PersonNameBox" type="Polygon2D" parent="gameOver_scene"]
position = Vector2(145, 763)
scale = Vector2(0.807388, 0.375424)
color = Color(0.48825, 0.315, 0.7, 0.917647)
polygon = PackedVector2Array(-0.199969, 1.66217, 1.67047, -2.6637, 310.698, -2.6637, 365.822, 98.5553, 306.562, 188.651, 152.066, 188.651, -0.973211, 188.651, -60.1351, 90.5643)

[node name="DialogueText" type="Label" parent="gameOver_scene"]
layout_mode = 0
offset_left = 219.0
offset_top = 858.0
offset_right = 667.0
offset_bottom = 924.0
scale = Vector2(3.32776, 3.02778)
theme_override_fonts/font = ExtResource("7_172v3")
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="PersonNameText" type="Label" parent="gameOver_scene"]
layout_mode = 0
offset_left = 160.0
offset_top = 780.0
offset_right = 254.0
offset_bottom = 801.0
scale = Vector2(2.31653, 2.09949)
theme_override_fonts/font = ExtResource("7_172v3")
metadata/_edit_use_anchors_ = true

[node name="CourtRecordButton" type="Button" parent="gameOver_scene"]
layout_mode = 0
offset_left = 1478.0
offset_top = -16.0
offset_right = 1597.0
offset_bottom = 9.0
scale = Vector2(3.82134, 4.93538)
theme_override_fonts/font = ExtResource("7_172v3")
theme_override_styles/normal = SubResource("StyleBoxTexture_4d7s1")
theme_override_styles/hover = SubResource("StyleBoxTexture_ap33e")
theme_override_styles/pressed = SubResource("StyleBoxTexture_l7ngl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8vwhy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0cily")

[node name="CourtRecordText" type="Label" parent="gameOver_scene/CourtRecordButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.097823
anchor_top = -0.0529059
anchor_right = 0.0978255
anchor_bottom = -0.0529059
offset_left = 15.8363
offset_top = 9.22477
offset_right = 126.836
offset_bottom = 30.2248
scale = Vector2(0.689314, 0.523945)
theme_override_fonts/font = ExtResource("7_172v3")
text = "Court Record"
metadata/_edit_use_anchors_ = true

[node name="Inventory_UI" parent="gameOver_scene" instance=ExtResource("9_aa6gm")]
visible = false

[node name="blip" type="AudioStreamPlayer2D" parent="gameOver_scene"]
stream = ExtResource("10_sqv8l")
volume_db = 6.559

[node name="typewrite" type="AudioStreamPlayer2D" parent="gameOver_scene"]
stream = ExtResource("11_xxq4s")
volume_db = 5.943

[node name="bang" type="AudioStreamPlayer2D" parent="gameOver_scene"]
stream = ExtResource("12_0tcf5")
volume_db = 19.86

[node name="gavel" type="AudioStreamPlayer2D" parent="gameOver_scene"]
position = Vector2(0, -106)
stream = ExtResource("13_df2x5")
volume_db = 14.889

[node name="blackRect" type="ColorRect" parent="gameOver_scene"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(50.4143, 33.0159)
color = Color(0, 0, 0, 1)

[node name="hammer" type="VideoStreamPlayer" parent="gameOver_scene"]
layout_mode = 0
offset_top = -53.0
offset_right = 2044.0
offset_bottom = 1119.0
audio_track = 1
stream = ExtResource("13_gvsat")
volume_db = 5.62
autoplay = true
expand = true
metadata/_edit_lock_ = true
